--- a/assignment1/knn.ipynb
+++ b/assignment1/knn.ipynb
@@ -166,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from cs231n.classifiers import KNearestNeighbor\n",
@@ -602,6 +604,21 @@
     "num_correct = np.sum(y_test_pred == y_test)\n",
     "accuracy = float(num_correct) / num_test\n",
     "print('Got %d / %d correct => accuracy: %f' % (num_correct, num_test, accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 总结：\n",
+    "\n",
+    "KNN分类器优缺点：\n",
+    "\n",
+    "现在对Nearest Neighbor分类器的优缺点进行思考。首先，Nearest Neighbor分类器易于理解，实现简单。其次，算法的训练不需要花时间，因为其训练过程只是将训练集数据存储起来。然而测试要花费大量时间计算，因为每个测试图像需要和所有存储的训练图像进行比较，这显然是一个缺点。在实际应用中，我们关注测试效率远远高于训练效率。其实，我们后续要学习的卷积神经网络在这个权衡上走到了另一个极端：虽然训练花费很多时间，但是一旦训练完成，对新的测试数据进行分类非常快。这样的模式就符合实际使用需求。\n",
+    "\n",
+    "具体说来，这些图片的排布更像是一种颜色分布函数，或者说是基于背景的，而不是图片的语义主体。比如，狗的图片可能和青蛙的图片非常接近，这是因为两张图片都是白色背景。从理想效果上来说，我们肯定是希望同类的图片能够聚集在一起，而不被背景或其他不相关因素干扰。为了达到这个目的，我们不能止步于原始像素比较，得继续前进。\n",
+    "\n",
+    "总结：\n"
    ]
   }
  ],
