--- a/notes/cs231n-notes-Python Numpy Tutorial.ipynb
+++ b/notes/cs231n-notes-Python Numpy Tutorial.ipynb
@@ -2,37 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cat cute\n",
-      "dog furry\n",
-      "cat cute\n",
-      "dog furry\n"
+      "6\n",
+      "[('dog3', (9, 10)), ('dog2', (8, 3)), ('dog', (7, 5)), ('cat', (6, 7))]\n",
+      "9\n",
+      "cat\n",
+      "cat (6, 7)\n",
+      "dog\n",
+      "dog (7, 5)\n",
+      "dog2\n",
+      "dog2 (8, 3)\n",
+      "dog3\n",
+      "dog3 (9, 10)\n"
      ]
     }
    ],
    "source": [
     "##cs231n notes:Python Numpy Tutorial\n",
-    "\n",
+    "import numpy as np\n",
     "#idctionary\n",
-    "d = {'cat':'cute','dog':'furry'}\n",
+    "d = {'cat':(6,7),'dog':(7,5),'dog2':(8,3),'dog3':(9,10)}\n",
+    "print(d['cat'][0])\n",
+    "c = sorted(d.items(),key=lambda item:item[1][0],reverse =True)\n",
+    "print(c)\n",
+    "print(c[0][1][0])\n",
     "\n",
-    "#三种遍历方式\n",
-    "for k,v in d.items():\n",
-    "    print(k,v)\n",
+    "\n",
+    "# #三种遍历方式\n",
+    "# for k,v in d.items():\n",
+    "#     print(k,v)\n",
     "    \n",
     "for i in d:\n",
-    "    print(i,d[i])\n"
+    "    print(i)  #字典的迭代，i表示key\n",
+    "    print(i,d[i])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -40,10 +54,10 @@
      "output_type": "stream",
      "text": [
       "None\n",
-      "{'cat': 'cute', 'dog': 'furry', 'monkey': 'wet'}\n",
+      "{'cat': 6, 'dog': 7, 'monkey': 'wet'}\n",
       "wet\n",
       "N/A\n",
-      "{'cat': 'cute', 'dog': 'furry'}\n"
+      "{'cat': 6, 'dog': 7}\n"
      ]
     }
    ],
@@ -63,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +85,7 @@
      "output_type": "stream",
      "text": [
       "dict_items([(9, 2), (4, 1)])\n",
+      "[(4, 1), (9, 2)]\n",
       "4\n"
      ]
     }
@@ -87,6 +102,7 @@
     "    d[i] = d.get(i,0)+1  #如果i第一次放进来，即不存在，则d.get()=1\n",
     "print(d.items())\n",
     "d_ = sorted(d.items(),key=lambda item:item[1],reverse=False)\n",
+    "print(d_)\n",
     "print(d_[0][0])"
    ]
   },
@@ -427,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
