--- a/notes/notes-Python Numpy Tutorial.ipynb
+++ b/notes/notes-Python Numpy Tutorial.ipynb
@@ -238,13 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[  5.  12.]\n",
+      " [ 21.  32.]]\n",
+      "[[  5.  12.]\n",
+      " [ 21.  32.]]\n",
+      "[[ 19.  22.]\n",
+      " [ 43.  50.]]\n",
       "[[ 1.  2.]\n",
       " [ 3.  4.]]\n"
      ]
@@ -256,9 +262,9 @@
     "import numpy as np\n",
     "x = np.array([[1,2],[3,4]], dtype=np.float64)\n",
     "y = np.array([[5,6],[7,8]], dtype=np.float64)\n",
-    "# print(x * y)             #点乘\n",
-    "# print(np.multiply(x,y))  #点乘\n",
-    "# print(np.dot(x,y))    ##矩阵相乘\n",
+    "print(x * y)             #点乘\n",
+    "print(np.multiply(x,y))  #点乘\n",
+    "print(np.dot(x,y))    ##矩阵相乘\n",
     "print(np.sqrt(x**2))\n",
     "\n",
     "# 求和 sum\n",
