--- a/myNotes/3.optimization_gradient.ipynb
+++ b/myNotes/3.optimization_gradient.ipynb
@@ -11,6 +11,8 @@
    "source": [
     " - 损失函数可视化\n",
     " - 最优化\n",
+    "     - 有限差值法求梯度\n",
+    "     - 微分法求梯度：softmax为损失函数时推导\n",
     "\n",
     "前面介绍了两部分：\n",
     " 1. 评分函数：将原始图像像素映射为分类评分值\n",
@@ -48,7 +50,7 @@
     "\n",
     "在数学上我们已经知道loss下降最快的方向就是梯度方向（gradient）。\n",
     "\n",
-    "**有限差值法计算梯度**：\n",
+    "## 有限差值法计算梯度\n",
     "\n",
     "公式：$\\frac{df(x)}{dx} = \\lim_{h\\to 0}\\frac{f(x+h)-f(x)}{h}$\n",
     "下面代码是一个输入为函数f和向量x，计算f的梯度的通用函数，它返回函数f在点x处的梯度："
@@ -100,30 +102,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cs231n'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-b936c9a188dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcs231n\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massignment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcs231n\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_CIFAR10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcs231n\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massignment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcs231n\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassifiers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msoftmax\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msoftmax_loss_vectorized\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cs231n'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original loss: 2.379955\n",
+      "for step size 0.000000 new loss: 2.379945\n",
+      "for step size 0.000000 new loss: 2.379855\n",
+      "for step size 0.000000 new loss: 2.378953\n",
+      "for step size 0.000000 new loss: 2.370042\n",
+      "for step size 0.000001 new loss: 2.291368\n",
+      "for step size 0.000010 new loss: 2.294673\n",
+      "for step size 0.000100 new loss: 12.200434\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/panxie/文档/cs231n/assignment1/cs231n/classifiers/softmax.py:85: RuntimeWarning: divide by zero encountered in log\n",
+      "  loss = np.sum(-np.log(coef[range(num_train), y]))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "for step size 0.001000 new loss: inf\n",
+      "for step size 0.010000 new loss: inf\n",
+      "for step size 0.100000 new loss: inf\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "import numpy as np\n",
-    "from assignment1.cs231n.data_utils import load_CIFAR10\n",
-    "from assignment1.cs231n.classifiers.softmax import softmax_loss_vectorized\n",
+    "from cs231n.data_utils import load_CIFAR_batch\n",
+    "from cs231n.classifiers.softmax import softmax_loss_vectorized\n",
     "\n",
     "##原始数据\n",
-    "cifar10_dir = 'cs231n/datasets/cifar-10-batches-py'\n",
-    "X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
+    "cifar10_dir = 'cs231n/datasets/cifar-10-batches-py/data_batch_1' #只取一组数据\n",
+    "X_train, y_train = load_CIFAR_batch(cifar10_dir)  #(1000,32,32,3) (1000,1)\n",
+    "X_train = np.reshape(X_train, (X_train.shape[0], -1))   ##（1000,3072）\n",
+    "#归一化\n",
+    "mean_image = np.mean(X_train, axis = 0)\n",
+    "X_train -= mean_image\n",
+    "# add bias dimension and transform into columns\n",
+    "X_train = np.hstack([X_train, np.ones((X_train.shape[0], 1))])\n",
     "\n",
     "##根据softmax损失函数据算loss,这个函数里面有用微分法计算梯度，但我们只取loss\n",
     "def CIFAR_loss_fun(W):\n",
@@ -143,6 +171,90 @@
     "    loss_new = CIFAR_loss_fun(W_new)\n",
     "    print(\"for step size %f new loss: %f\" % (step_size, loss_new))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 微分分析计算梯度"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "有限差值法太太太太慢了，而且终究只是近似。第二个梯度计算方法是利用微分来分析，能得到计算梯度的公式（不是近似），用公式计算梯度速度很快，唯一不好的就是实现的时候容易出错。为了解决这个问题，在实际操作时常常将分析梯度法的结果和数值梯度法的结果作比较，以此来检查其实现的正确性，这个步骤叫做梯度检查。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以sofemax为例进行推导：\n",
+    "\n",
+    "对单个样本其损失值：\n",
+    "$L_i = -\\log(\\frac{e^{f_{y_i}}}{\\sum_je^{f_j}})$\n",
+    "\n",
+    "整个数据集的损失值：\n",
+    "$L = \\frac{1}{N}\\sum_iL_i +\\lambda \\sum_k\\sum_lW_{k,l}^2 $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$L = \\frac{1}{N}\\sum_i-\\log(\\frac{e^{f_{y_i}}}{\\sum_je^{f_j}}) +\\lambda \\sum_k\\sum_lW_{k,l}^2$    \n",
+    "这里$f_{y_i}$是一个样本对应的真实标签的值，shape=(1,)\n",
+    "\n",
+    "$L = \\frac{1}{N}\\sum_i-\\log(\\frac{e^{f_{y_i}}}{\\sum_je^{f_j}}) +\\lambda \\sum_k\\sum_lW_{k,l}^2\n",
+    "= \\frac{1}{N}\\sum_i(log(\\sum_je^{f_j})-f_{y_i})+\\lambda \\sum_k\\sum_lW_{k,l}^2$   \n",
+    "这里$f_{y_i}$是所有样本对应的真实标签的值,shape=(N,1) 代码中： score[range(N),y]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "其中$f_{y_i}=W_{y_i}x$, $f_{_i}=W_{j \\ne y_i}x$ \n",
+    "\n",
+    "对W求导，$W_{y_i}$和$W_{j\\ne y_i}$的求导是不一样的\n",
+    "\n",
+    "$\\dfrac{\\partial L}{\\partial W_{y_i}} = \\dfrac{1}{N}(\\sum_i\\dfrac{e^{W_{y_i}x}}{\\sum_je^{W_jx}}x-xI(j==y_i))+2\\lambda W$  \n",
+    "#### 注意这其中的求和，先以行为单位求和，即每个样本的loss，然后以列为单位求和，求出总的loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "代码实现："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "score = X.dot(W)  ##(N,3073)*(3073,10) = (N,10)\n",
+    "score -= np.max(score, axis=1, keepdims=True)  # [N,10]\n",
+    "exp_score = np.exp(score)  # [N,10]\n",
+    "sum_score = np.sum(exp_score, axis=1, keepdims=True)   ##(N,1)以行为单位求和\n",
+    "coef = exp_score / sum_score #(N,10)\n",
+    "loss = np.sum(-np.log(coef[range(num_train), y])) ##取出coef中每个样本真实标签对应的那列，然后以行为单位求和，即总loss\n",
+    "loss /= num_train\n",
+    "loss += reg * np.sum(W * W)\n",
+    "\n",
+    "coef_yi = np.zeros_like(coef)\n",
+    "coef_yi[range(num_train), y] = 1  ##W矩阵中{j==y_i}每一行真实标签对应的位置参数要-1\n",
+    "dW = X.T.dot(coef - coef_yi)\n",
+    "dW /= num_train\n",
+    "dW += reg * 2 * W"
    ]
   },
   {
