finished fc-net

--- a/myNotes/1.Python Numpy Tutorial.ipynb
+++ b/myNotes/1.Python Numpy Tutorial.ipynb
@@ -46,6 +46,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "learning_rate 0.01\n",
+      "momentum 0.9\n",
+      "learning_rate\n",
+      "momentum\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = {}\n",
+    "config.setdefault('learning_rate', 1e-2)\n",
+    "config.setdefault('momentum', 0.9)\n",
+    "for k,v in config.items():\n",
+    "    print(k,v)\n",
+    "for p in config:\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -108,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<map object at 0x7f299876ff28>\n"
+      "[11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
      ]
     }
    ],
@@ -124,9 +150,9 @@
     "# map()函数接受两个参数，一个是函数，一个是iterable\n",
     "\n",
     "a = [1,2,3]\n",
-    "b = map(lambda a:a+10,li)\n",
-    "# print(list(b))\n",
-    "print(map(str, [1, 2, 3, 4, 5, 6, 7, 8, 9]))\n"
+    "b = map(lambda a:a+10,[1, 2, 3, 4, 5, 6, 7, 8, 9])   #lambada 匿名函数～\n",
+    "print(list(b))\n",
+    "\n"
    ]
   },
   {
@@ -317,6 +343,29 @@
     "print(yy)\n",
     "print(xx+y)    #boardcasting (4,1)+(5,)= (4,5)\n",
     "print(xx+yy)   #boardcasting (4,1)+(1,5)= (4,5) 这两个结果是一样的"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.599799  ,  0.36489086,  0.29365265,  0.51809092],\n",
+       "       [ 0.0873581 ,  0.97804973,  0.24759691,  0.97097621]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.rand(2,4)\n",
+    "a.reshape(2,2,2)\n",
+    "a"
    ]
   },
   {
