--- a/myNotes/2.线性分类器-SVM-Softmax.ipynb
+++ b/myNotes/2.线性分类器-SVM-Softmax.ipynb
@@ -101,7 +101,7 @@
     "==\n",
     "要使得其与原始训练数据通过score function得到的结果与真实类别一致，我们需要调整参数权重W和偏差b. 怎么调整是梯度下降的事儿～那么调整之前，我们需要先衡量下对结果的不满意程度，然后适当调整对吧～～这就是损失函数干的事儿～\n",
     "\n",
-    "**多类支持向量机损失 Multiclass Support Vector Mashine Loss**\n",
+    "### **多类支持向量机损失 Multiclass Support Vector Mashine Loss**\n",
     "\n",
     "\n",
     "$L_i = \\sum_{j\\ne y_i}^{10}max(0,s_j - s_{y_i}+\\Delta)$\n",
@@ -151,7 +151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Softmax分类器** \n",
+    "### **Softmax分类器** \n",
+    "\n",
+    "\n",
     "Softmax分类器就可以理解为逻辑回归分类器面对多个分类的一般化归纳。\n",
     "函数映射保持不变，将这些评分值视为每个分类的未归一化的对数频率。即交叉熵损失函数(cross-entropy loss). 公式如下：\n",
     "$L_i = -\\log(\\frac{e^{f_{y_i}}}{\\sum_je^{f_j}})$\n",
@@ -161,7 +163,7 @@
     "> 信息量/信息熵（熵）/交叉熵/条件熵\n",
     "> **信息量：**一个事件的信息量就是这个时间发生的概率的负对数，概率越大，所带来的信息就越少嘛。至于为什么是负对数，就要问香农了。。起码要满足$P(X)=1$时信息量为0，且始终大于0 $$-\\log P(X)$$\n",
     "> **信息熵，**也就是熵，是随机变量不确定性的度量，依赖于事件X的概率分布。即信息熵是信息量的期望。即求离散分布列的期望～～$$H(p) = -\\sum_{i=1}^np_i\\log p_i$$\n",
-    "> **交叉熵：**回归到分类问题来，我们通过score function得到一个结果（10，1），通过softmax函数压缩成0到1的概率分布，我们称为$q_i$吧，$$H(p,q) = -\\sum_{i=1}^nq_i\\log p_i$$就是我们所说的交叉熵，通过分析可以发现：$H(p,q)>=H(p)$恒成立，当且仅当$q_i$分布和$p_i$相同时，两者相等。\n",
+    "> **交叉熵：**回归到分类问题来，我们通过score function得到一个结果（10，1），通过softmax函数压缩成0到1的概率分布，我们称为$q_i=\\frac{e^{f_{y_i}}}{\\sum_je^{f_j}}$吧，$$H(p,q) = -\\sum_{i=1}^np_i\\log q_i$$就是我们所说的交叉熵，通过分析可以发现：$H(p,q)>=H(p)$恒成立，当且仅当$q_i$分布和$p_i$相同时，两者相等。\n",
     "> 我们这里因为$p_i$是真实分布，一旦训练数据确定，其就是定植，因此就省去了，得到了cross-entroy function~~~\n",
     "> **相对熵：**跟交叉熵是同样的概念，$D(p||q)=H(p,q)-H(p)$，又称为KL散度，表征两个函数或概率分布的差异性，差异越大则相对熵越大～～～\n",
     "\n",
