--- a/myNotes/3.最优化-求梯度.ipynb
+++ b/myNotes/3.最优化-求梯度.ipynb
@@ -258,13 +258,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "以多类SVM为例求梯度："
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#求loss   y = max(0,x_j-x_{y_j}+1)   margin = x_j-x_{y_j}+1\n",
+    "N = x.shape[0]\n",
+    "correct_class_scores = x[np.arange(N), y]   ## 这得到的是一个行向量(N,1)\n",
+    "margins = np.maximum(0, x - correct_class_scores[:, np.newaxis] + 1.0)   #[:, np.newaxis]将行向量转换为列向量\n",
+    "margins[np.arange(N), y] = 0   # 真实标签对应的列是1,要转换为0\n",
+    "loss = np.sum(margins) / N\n",
+    "#求梯度   \n",
+    "num_pos = np.sum(margins > 0, axis=1)  ## 每行大于0的个数\n",
+    "dx = np.zeros_like(x)\n",
+    "dx[margins > 0] = 1    \n",
+    "dx[np.arange(N), y] -= num_pos  # ha？ 哦哦，W_{y_j}在margin大于0是求导为-1,所以每一行对应的是这一行大于0的个数 -pos\n",
+    "dx /= N\n",
+    "return loss, dx"
+   ]
   }
  ],
  "metadata": {
