--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -627,7 +627,7 @@
     "np.random.seed(231)\n",
     "N, D, H1, H2, C = 2, 15, 20, 30, 10\n",
     "X = np.random.randn(N, D)\n",
-    "y = np.random.randint(C, size=(N,))\n",
+    "y = np.random.randint(C, size=(N,))    #随机生成[0,C)的数据,shape=(N,)\n",
     "\n",
     "for reg in [0, 3.14]:\n",
     "  print('Running check with reg = ', reg)\n",
