--- a/myNotes/3.最优化-求梯度.ipynb
+++ b/myNotes/3.最优化-求梯度.ipynb
@@ -230,17 +230,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "代码实现："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "softmax代码实现：\n",
+    "```python\n",
     "score = X.dot(W)  ##(N,3073)*(3073,10) = (N,10)\n",
     "score -= np.max(score, axis=1, keepdims=True)  # [N,10]\n",
     "exp_score = np.exp(score)  # [N,10]\n",
@@ -254,7 +245,8 @@
     "coef_yi[range(num_train), y] = 1  ##W矩阵中{j==y_i}每一行真实标签对应的位置参数要-1\n",
     "dW = X.T.dot(coef - coef_yi)\n",
     "dW /= num_train\n",
-    "dW += reg * 2 * W"
+    "dW += reg * 2 * W\n",
+    "```"
    ]
   },
   {
@@ -263,17 +255,8 @@
     "collapsed": true
    },
    "source": [
-    "以多类SVM为例求梯度："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "以多类SVM为例求梯度：\n",
+    "```python\n",
     "#求loss   y = max(0,x_j-x_{y_j}+1)   margin = x_j-x_{y_j}+1\n",
     "N = x.shape[0]\n",
     "correct_class_scores = x[np.arange(N), y]   ## 这得到的是一个行向量(N,1)\n",
@@ -286,7 +269,8 @@
     "dx[margins > 0] = 1    \n",
     "dx[np.arange(N), y] -= num_pos  # ha？ 哦哦，W_{y_j}在margin大于0是求导为-1,所以每一行对应的是这一行大于0的个数 -pos\n",
     "dx /= N\n",
-    "return loss, dx"
+    "return loss, dx\n",
+    "```"
    ]
   }
  ],
