--- a/myNotes/6. 训练一个神经网络1-- epoch,batch_size,iteration.ipynb
+++ b/myNotes/6. 训练一个神经网络1-- epoch,batch_size,iteration.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- batch_size, iteration, epoch\n",
-    "- "
+    "- batch_size, iteration, epoch"
    ]
   },
   {
@@ -102,6 +101,24 @@
     "```\n",
     "iterations_per_epoch = max(num_train / batch_size, 1)  ##跑完整个数据需要多少次\n",
     "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 总结下怎么确定batch_size的大小呢?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "样本量N<=2000时,用batch梯度下降\n",
+    "样本量很大时,用mini-batch梯度下降,batch_size的大小通常取64,128,256,512. 保证符合CPU\\GPU的数据存储的方式,这样读取数据更快吧?"
    ]
   }
  ],
