--- a/myNotes_rnn/16. word2vec.ipynb
+++ b/myNotes_rnn/16. word2vec.ipynb
@@ -147,27 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\prod_{t=1}^{T}P(w^{(t)}|w^{(t-m)},...,w^{(t-1)},w^{(t+1)},...,w^{(t+m)})$$\n",
-    "\n",
-    "极大似然估计～\n",
-    "\n",
-    "其等价于一下损失函数：\n",
-    "$$-\\sum_{t=1}^{T}logP(w^{(t)}|w^{(t-m)},...,w^{(t-1)},w^{(t+1)},...,w^{(t+m)})$$\n",
-    "\n",
-    "我们需要学习得到的模型参数是词嵌入向量。为了将模型参数植入损失函数，就要用模型参数，即用词嵌入向量来表达损失函数，在这里也就是表达损失函数中的背景词$w_o$生成中心词$w_c$的概率。与skip-grams不同的是，背景词向量用v表示，中心词用u表示。\n",
-    "\n",
-    "$$P(w_c|w_{01},...,w_{o2m}) = \\dfrac{exp[u_c^T(v_{o1}+...+v_{o2m})/(2m)]}{\\sum_{i\\in V}exp[u_i^T(v_{o1}+...+v_{o2m})/(2m)]}$$\n",
-    "\n",
-    "通过微分，可以算出上式中生成概率的对数关于任一背景词$V_{oi}(i=1,...,2m)$的梯度为：\n",
-    "\n",
-    "$$\\dfrac{\\partial P(w_c|w_{01},...,w_{o2m})}{\\partial v_{oi} } = \\dfrac{1}{2m}(u_c - \\sum_{j\\in V}\\dfrac{exp(u_j^Tv_c)}{\\sum_{i\\in V}exp(u_i^Tv_c)}u_j)$$\n",
-    "\n",
-    "注意这里与skip-grams不同，因为是用背景词生成中心词，故而是对背景词一次求微分。\n",
-    "\n",
-    "等价于：\n",
-    "$$\\dfrac{\\partial P(w_c|w_{01},...,w_{o2m})}{\\partial u_{oi} } = \\dfrac{1}{2m}(u_c - \\sum_{j\\in V}P(w_j|w_c)u_j)$$\n",
-    "\n",
-    "通过上面计算得到梯度后，我们可以使用随机梯度下降来不断迭代各个模型参数$v_{oi}(i=1,…,2m)$。其他模型参数$u_c$的迭代方式同理可得。最终，对于词典中的任一索引为i的词，我们均得到该词作为背景词和中心词的两组词向量$v_i和u_i$。"
+    "极大似然估计～"
    ]
   },
   {
@@ -217,27 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. 近似训练法\n",
-    "\n",
-    ">**总结**：上述模型已确定，要学习的参数模型有了～其表达的损失函数有了～训练方法，也就是随机梯度下降也有了～回顾一下整个训练过程：\n",
-    "\n",
-    ">以skip-grams为例：\n",
-    "- 从语料库中，选择一个中心词$w_c$,然后采用极大似然估计原理，求出生成背景词$w_o$的概率\n",
-    "- 从生成概率最大化$P(w_0|w_c)$，求出损失函数\n",
-    "- 使用需要学习得到的参数模型，也就是词向量来表达损失函数中的生成概率。\n",
-    "- 求出损失函数对中心词向量的梯度，然后用SGD来进行训练。\n",
-    "- **需要注意的是:**在语料库中，中心词的选择问题，是遍历词典中所有的词吗？还是语料库中均匀且随机的选择？\n",
-    "- 由中心词生成背景词使用的softmax函数的计算量$\\sum_{j\\in V}\\dfrac{exp(u_j^Tv_c)}{\\sum_{i\\in V}exp(u_i^Tv_c)}u_j$太大。其也会出现在梯度中。\n",
-    "\n",
-    "\n",
-    "\n",
-    "但梯度的计算开销与词典大小Ｖ相关，当词典较大时，$\\sum_{j\\in V}\\dfrac{exp(u_j^Tv_c)}{\\sum_{i\\in V}exp(u_i^Tv_c)}u_j$的计算开销太大了。因此，我们采用近似的方法来计算这些梯度。近似训练法包括负采样和层序softmax.\n",
-    "\n",
-    "来算一下，如果词典V有10000个词，那么训练一个词典所需的计算量$10000^{10000}$太特么大了\n",
-    "\n",
-    "#### 3.１　负采样\n",
-    "\n",
-    "[Mikolov et.al.,2013. Distributed representation of words and phrases and their compositionality]"
+    "### 3. 近似训练法"
    ]
   },
   {
@@ -281,45 +241,7 @@
    "source": [
     "以跳字模型来讨论负采样。\n",
     "\n",
-    "词典Ｖ大小之所以会在目标函数中出现，是因为中心词$wc生成背景词wo的概率P(w_o∣w_c)$使用了softmax，而softmax正是考虑了背景词可能是词典中的任一词，并体现在softmax的分母上。\n",
-    "\n",
-    "词典V大小之所以会在目标函数中出现，是因为中心词wc生成背景词wo的概率ℙ(wo∣wc)使用了softmax，而softmax正是考虑了背景词可能是词典中的任一词，并体现在softmax的分母上。\n",
-    "\n",
-    "我们不妨换个角度，假设中心词wc生成背景词wo由以下相互独立事件联合组成来近似\n",
-    "\n",
-    "- 中心词wc和背景词wo同时出现在该训练数据窗口\n",
-    "- 中心词wc和第1个噪声词w1不同时出现在该训练数据窗口（噪声词w1按噪声词分布ℙ(w)随机生成，假设一定和wc不同时出现在该训练数据窗口）\n",
-    "- …\n",
-    "- 中心词wc和第K个噪声词wK不同时出现在该训练数据窗口（噪声词wK按噪声词分布ℙ(w)随机生成，假设一定和wc不同时出现在该训练数据窗口）\n",
-    "\n",
-    ">简单理解就是：本来我们在求生成概率，中心词$w_c$生成背景词$w_o$时，是考虑了整个词典中的所有的词作为背景词的可能。故而分母中出现词典大小。\n",
-    "\n",
-    ">负采样呢？就是在训练窗口，确确实实出现了的，我们考虑这个背景词，其他没有出现在这个训练窗口的词，我们叫它们噪声词，这些个噪声词，我们从词典中选择Ｋ个。**噪声词的选择以及Ｋ值的大小选择问题先留着**\n",
-    "\n",
-    ">这里所谓的噪声词就是负样本（negative sampling）吧～\n",
-    "\n",
-    "**又要注意了**，这里使用sigmoid()函数定义了一个概率：\n",
-    "$$P(D=1|w_o,w_c) = \\sigma(u_o^Tv_c)\\quad(3)$$　\n",
-    "\n",
-    "那么，中心词$w_c$生成背景词$w_o$的概率的对数可以近似为：\n",
-    "$$logP(w_o|w_c) = log[P(D=1|w_o,w_c)]\\prod_{k=1,w_k~P(w)}^KP(D=0|w_k,w_c)\\quad(4)$$\n",
-    "\n",
-    ">这里是在训练窗口中出现的背景词和负采样Ｋ个噪声词的联合概率。对数似然估计最大！！！\n",
-    "\n",
-    ">其中噪声词，也就是负样本的选择，与噪声词的分布P(w)相关。\n",
-    "\n",
-    "将(3)带入(4)可得：\n",
-    "$$logP(w_o|w_c) = log\\dfrac{1}{1+exp(-u_o^Tv_c)}＋\\sum_{k=1,w_k~P(w)}^Klog\\dfrac{1}{1+exp(-u_k^Tv_c)}$$\n",
-    "似然估计告诉我们，要让这个概率最大～\n",
-    "\n",
-    "则取其相反数，损失函数：\n",
-    "$$－logP(w_o|w_c) = －log\\dfrac{1}{1+exp(-u_o^Tv_c)}-\\sum_{k=1,w_k~P(w)}^Klog\\dfrac{1}{１＋exp(u_k^Tv_c)}$$\n",
-    "\n",
-    "**So, 损失函数计算复杂度从O(|V|)变成了O(K)**\n",
-    "\n",
-    "同理，连续词袋模型也可以用负采样～　\n",
-    "\n",
-    "公式看原文链接吧..[gluon－词向量](https://zh.gluon.ai/chapter_natural-language-processing/word2vec.html)"
+    "词典Ｖ大小之所以会在目标函数中出现，是因为中心词$wc生成背景词wo的概率P(w_o∣w_c)$使用了softmax，而softmax正是考虑了背景词可能是词典中的任一词，并体现在softmax的分母上。"
    ]
   },
   {
@@ -411,28 +333,7 @@
    "source": [
     "#### 3.2 层序softmax\n",
     "\n",
-    "至始至终词向量之的训练之所以复杂，就是因为在中心词生成背景词的生成概率使用了softmax函数，从而引入了整个词典。计算复杂度为$O(|V|)$\n",
-    "\n",
-    "层序softmax利用了二叉树。树的每个叶子节点代表着词典Ｖ中的每个词。每个词wi相应的词向量为vi。我们以下图为例，来描述层序softmax的工作机制。\n",
-    "<img src=\"https://zh.gluon.ai/_images/hierarchical_softmax.svg\">\n",
-    "\n",
-    "假设L(w)为从二叉树的根到代表词w的叶子节点的路径上的节点数,节点设为n(w,i),节点向量为${u_{n(w,i)}}$.则skip-grams和CBOW中所需要计算的任意词$w_i$生成w的概率为：\n",
-    "\n",
-    "$$P(w|w_i) = \\prod_{j=1}^{L(w)-1}\\sigma([n(w,j+1)==leftChild(n(w,j))]\\cdot u_{n(w,j)}^Tv_j)\\quad(5)$$\n",
-    "\n",
-    "其中[　]的部分，如果x为真，[x]=1;反之[x]=-1.这里就是判断从根节点到叶子节点这条路径上，子节点是否是左儿子。\n",
-    "\n",
-    "由于$\\sigma(x)+\\sigma(-x)=1$,则$w_i$生成词典中任何词的概率之和为１：\n",
-    "$$\\sum_{j=1}^VP(w_j|w_i) = 1$$\n",
-    "\n",
-    "让我们计算wi生成w3的概率，由于在二叉树中由根到w3的路径上需要向左、向右、再向左地遍历，我们得到:\n",
-    "$$P(w_3|w_i) = \\sigma(u_{n(w_3,1)}^Tv_i)\\sigma(-u_{n(w_3,2)}^Tv_i)\\sigma(u_{n(w_3,3)}^Tv_i)$$\n",
-    "\n",
-    "我们可以使用随机梯度下降在跳字模型和连续词袋模型中不断迭代计算字典中所有词向量v和非叶子节点的向量u。每次迭代的计算开销由$O(|V|)$降为二叉树的高度$O(log|V|)$。\n",
-    "\n",
-    "很神奇。。只能说作者脑洞好大。。抛开数学上的推导，完全无法理解为何。。。\n",
-    "\n",
-    "然后将(5)式新的生成概率带入到损失函数中取，进行迭代训练。其中的模型参数不仅包括所有的词向量v，还包括非叶子节点的向量u。"
+    "至始至终词向量之的训练之所以复杂，就是因为在中心词生成背景词的生成概率使用了softmax函数，从而引入了整个词典。计算复杂度为$O(|V|)$"
    ]
   },
   {
